# tiis-challenge

./: README.md
tiis-backend/: .editorconfig  .gitignore  LICENSE  pyproject.toml
tiis-backend/apps/extractor/: __init__.py  __main__.py  extractor_job.py  extractor_job.py.bak  publisher.py  scheduler.py
tiis-backend/apps/saver/: __init__.py  consumer.py
tiis-backend/apps/transformer/: __init__.py  consumer.py
tiis-backend/infra/compose/: .env.example  Dockerfile.extractor  Dockerfile.saver  Dockerfile.transformer  docker-compose.yml
tiis-backend/resources/: departments.csv
tiis-backend/services/api/: __init__.py
tiis-backend/tests/: __init__.py
tiis-backend/utils/: config.py  db.py  logging.py  lookup.py  mq.py  schemas.py  sftp.py
